frontend up, backend db draft

--- a/lotto/templates/index.html
+++ b/lotto/templates/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html>                                                                         <html lang="en">                                                                            <head>                                                                                      <title>                                                                                     Search Engine                                                                       </title>                                                                            </head>                                                                                 <body>                                                                                      <div id="reactEntry">                                                                       <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>                                                                             </div>                                                                              </body>                                                                             </html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>
+            Lotto Predictor
+        </title>
+    </head>
+    <body>
+        <div id="reactEntry">
+            <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
+        </div>
+    </body>
+</html>
